--- a/Wicak_tes.html
+++ b/Wicak_tes.html
@@ -51,7 +51,10 @@
             <!-- Skyscraper Ad Unit -->
             <div class="col-md-4">
                 <div class="ad-unit" style="height: 600px;">
-                    <p>Skyscraper Ad Unit (160x600)</p>
+                    <p>Skyscraper Ad Unit (160x600)
+                        <!-- Pinky Ad Server / Banner / 160x600 / Wide Skyscraper --><ins class="aso-zone" data-zone="126286"></ins><script data-cfasync="false" async src="https://media.aso1.net/js/code.min.js"></script><!-- /Pinky Ad Server -->
+                    
+                    </p>
                 </div>
             </div>
         </div>
