--- a/Wicak_tes.html
+++ b/Wicak_tes.html
@@ -31,6 +31,7 @@
         <!-- Leaderboard Ad Unit -->
         <div class="ad-unit" style="height: 90px;">
             <p>Leaderboard Ad Unit (728x90)</p>
+            <img src="https://trkr.aso1.net/link?z=126511" alt="Ad Tracker Image">
         </div>
 
         <!-- Content Row -->
