--- a/Wicak_tes.html
+++ b/Wicak_tes.html
@@ -31,7 +31,7 @@
         <!-- Leaderboard Ad Unit -->
         <div class="ad-unit" style="height: 90px;">
             <p>Leaderboard Ad Unit (728x90)</p>
-            <img src="https://trkr.aso1.net/link?z=126511" alt="Ad Tracker Image">
+            <!-- Pinky Ad Server / Banner / 728x90 / Leaderboard --><ins class="aso-zone" data-zone="126512"></ins><script data-cfasync="false" async src="https://media.aso1.net/js/code.min.js"></script><!-- /Pinky Ad Server -->
         </div>
 
         <!-- Content Row -->
