--- a/Wicak_tes.html
+++ b/Wicak_tes.html
@@ -29,7 +29,7 @@
     <!-- Container -->
     <div class="container mt-4">
         <!-- Leaderboard Ad Unit -->
-        <div class="ad-unit" style="height: 90px;">
+        <div class="" style="height: 90px;">
 
             <!-- Pinky Ad Server / Banner / 728x90 / Leaderboard --><ins class="aso-zone" data-zone="126512"></ins><script data-cfasync="false" async src="https://media.aso1.net/js/code.min.js"></script><!-- /Pinky Ad Server -->
         </div>
