--- a/Wicak_tes.html
+++ b/Wicak_tes.html
@@ -46,7 +46,7 @@
                 
                 <!-- Rectangle Banner Ad Unit -->
                 <div class="ad-unit" style="height: 250px;">
-                    <p>Rectangle Banner Ad Unit (300x250)</p>
+                    <!-- Pinky Ad Server / Banner / 300x250 / Medium Rectangle --><ins class="aso-zone" data-zone="126624"></ins><script data-cfasync="false" async src="https://media.aso1.net/js/code.min.js"></script><!-- /Pinky Ad Server -->
                 </div>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
