--- a/Wicak_tes.html
+++ b/Wicak_tes.html
@@ -45,7 +45,7 @@
           
                 
                 <!-- Rectangle Banner Ad Unit -->
-                <div class="ad-unit" style="height: 250px;">
+                <div class="ad-unit-1" style="height: 250px;">
                     <!-- Pinky Ad Server / Banner / 300x250 / Medium Rectangle --><ins class="aso-zone" data-zone="126624"></ins><script data-cfasync="false" async src="https://media.aso1.net/js/code.min.js"></script><!-- /Pinky Ad Server -->
                 </div>
 
